# nonogram-solver

./: Cargo.toml  puzzles.json
frontend/: index.html
src/: main.rs  puzzle.rs  solver.rs
