[package]
name = "first_try"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
websocket = {version="0.26.2",default-features=false,features=["sync"]}
serde_json = "1.0.61"
serde = {version="1.0.120",features=["derive"]}